--- a/www/css/pages/map.css
+++ b/www/css/pages/map.css
@@ -44,14 +44,14 @@
   padding: 5%;
   text-align: center;
   vertical-align: middle;
-  background-color: white; 
+  /*background-color: white; */
   border: 1px solid black;
   position: absolute;
   opacity:1;
   top: 1;
   left:0;
   visibility: hidden;
-  background-color:#00F000;
+  background-color:#8af48a;
   transition: none;
 }
 
